@@ -1,188 +1,114 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
+plugins {
+  id 'jacoco'
+  id 'com.android.library'
+  id 'org.jetbrains.kotlin.android'
+}
 
-version = "1.0.6"
+jacoco { toolVersion = '0.8.10' }
 
 android {
-    compileSdkVersion 28
+  namespace 'com.nerdstone.neatandroidstepper.core'
+  compileSdk 35
+  buildToolsVersion '35.0.0'
+  buildFeatures { buildConfig true }
 
-    defaultConfig {
-        minSdkVersion 18
-        targetSdkVersion 28
-        versionCode 1
-        versionName this.version
+  defaultConfig {
+    minSdk 18
+    targetSdk 35
+    versionCode (project.findProperty('VERSION_CODE')?.toString()?.toInteger() ?: 106)
+    versionName (project.findProperty('VERSION_NAME')?.toString() ?: '1.0.6-SNAPSHOT')
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    consumerProguardFiles 'consumer-rules.pro'
+  }
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        consumerProguardFiles 'consumer-rules.pro'
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+  }
+  kotlinOptions {
+    jvmTarget = '1.8'
+  }
+
+  lint { abortOnError false }
+
+  buildTypes {
+    release { minifyEnabled false; proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro' }
+    debug   { debuggable true }
+  }
+
+  packaging { resources { excludes += [
+    'LICENSE.txt', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt',
+    'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/INDEX.LIST'
+  ] } }
+
+  testOptions {
+    unitTests {
+      includeAndroidResources = true
+      all {
+        jvmArgs '-Xmx1024m'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.io=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.net=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.text=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.security=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/sun.security.util=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED'
+        jvmArgs '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
+        systemProperty 'robolectric.enabledSdks', '28'
+      }
     }
+  }
+}
 
-    // Keep the following configuration in order to target Java 8.
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
+kotlin {
+  jvmToolchain(17)
+}
 
-    lintOptions {
-        abortOnError false
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-
+tasks.withType(Test).configureEach {
+  jacoco {
+    includeNoLocationClasses = true
+    excludes = ['jdk.internal.*']
+  }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2' // Do not upgrade for now; breaking changes
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+  // AndroidX
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation 'androidx.core:core-ktx:1.13.1'
+  implementation 'com.google.android.material:material:1.12.0'
+  implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+  // Unit test
+  testImplementation 'junit:junit:4.13.2'
+  testImplementation 'org.robolectric:robolectric:4.10.3'
+  testImplementation 'org.mockito:mockito-core:4.6.1'
+  testImplementation 'org.mockito:mockito-inline:4.6.1'
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
 
-def properties = new Properties()
-properties.load(new FileInputStream(rootProject.file("local.properties")))
-
-def getArtifactId = { ->
-    return "neat-android-stepper"
+// Jacoco report (modern DSL)
+tasks.register('jacocoTestReport', JacocoReport) {
+  dependsOn 'testDebugUnitTest'
+  reports {
+    xml.required = true; html.required = true
+    xml.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml")
+    html.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/html")
+  }
+  def fileFilter = ['**/R.class','**/R$*.class','**/BuildConfig.*','**/Manifest*.*','**/*Test*.*','android/**/*.*','**/*$ViewBinder*.*']
+  def debugTree = fileTree(dir: "$buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
+  def mainSrc = "$project.projectDir/src/main/java"
+  sourceDirectories.setFrom(files([mainSrc]))
+  classDirectories.setFrom(files([debugTree]))
+  executionData.setFrom(fileTree(dir: buildDir, includes: ['jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec']))
 }
 
-task androidJavadocs(type: Javadoc) {
-    source = android.sourceSets.main.java.srcDirs
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    android.libraryVariants.all { variant ->
-        if (variant.name == 'release') {
-            if (variant.hasProperty('javaCompileProvider')) {
-                // Android 3.3.0+
-                owner.classpath += variant.javaCompileProvider.get().classpath
-            } else {
-                owner.classpath += variant.javaCompile.classpath
-            }
-        }
-    }
-    exclude '**/R.html', '**/R.*.html', '**/index.html'
-}
-
-task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
-    archiveClassifier.set('javadoc')
-    from androidJavadocs.destinationDir
-}
-
-task androidSourcesJar(type: Jar) {
-    archiveClassifier.set('sources')
-    from android.sourceSets.main.java.srcDirs
-}
-
-publishing {
-    publications {
-        NeatStepper(MavenPublication) {
-            groupId 'com.nerdstone'
-            artifactId  getArtifactId()
-            version this.version
-            artifact("$buildDir/outputs/aar/${ getArtifactId()}-release.aar")
-            artifact androidJavadocsJar
-            artifact androidSourcesJar
-
-            pom {
-                name = 'Neat Android Stepper'
-                description = 'Library that allows using material stepper on an Android application. '
-                url = 'https://github.com/ellykits/neat-android-stepper'
-                licenses {
-                    license {
-                        name = 'The Apache License, Version 2.0'
-                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-            }
-            //Refer to this gist https://gist.github.com/Robyer/a6578e60127418b380ca133a1291f017
-            pom.withXml {
-                final dependenciesNode = asNode().appendNode('dependencies')
-
-                ext.addDependency = { dep, String scope ->
-                    if (dep.group == null || dep.version == null || dep.name == null || dep.name == "unspecified")
-                        return // ignore invalid dependencies
-
-                    final dependencyNode = dependenciesNode.appendNode('dependency')
-                    dependencyNode.appendNode('groupId', dep.group)
-                    dependencyNode.appendNode('artifactId', dep.name)
-                    dependencyNode.appendNode('version', dep.version)
-                    dependencyNode.appendNode('scope', scope)
-
-                    if (!dep.transitive) {
-                        // If this dependency is not transitive, we should force exclude all its dependencies from the POM
-                        final exclusionNode = dependencyNode.appendNode('exclusions').appendNode('exclusion')
-                        exclusionNode.appendNode('groupId', '*')
-                        exclusionNode.appendNode('artifactId', '*')
-                    } else if (!dep.properties.excludeRules.empty) {
-                        // Otherwise add specified exclude rules
-                        final exclusionsNode = dependencyNode.appendNode('exclusions')
-                        dep.properties.excludeRules.each { rule ->
-                            final exclusionNode = exclusionsNode.appendNode('exclusion')
-                            exclusionNode.appendNode('groupId', rule.group ?: '*')
-                            exclusionNode.appendNode('artifactId', rule.module ?: '*')
-                        }
-                    }
-                }
-
-                // List all "implementation" dependencies (for old Gradle)
-                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "implementation") }
-                // List all "api" dependencies (for new Gradle) as "implementation" dependencies
-                configurations.api.getDependencies().each { dep -> addDependency(dep, "implementation") }
-                // List all "implementation" dependencies (for new Gradle) as "runtime" dependencies
-                configurations.implementation.getDependencies().each { dep -> addDependency(dep, "runtime") }
-            }
-        }
-    }
-
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            /**
-             * Configure path of the package repository on Github using the GITHUB_USER_ID and
-             * Git Repository
-             */
-            url = uri("https://maven.pkg.github.com/ellykits/neat-android-stepper")
-            credentials {
-                /** get credentials from local.properties in root project folder file with
-                 ** gpr.usr=GITHUB_USER_ID & gpr.key=PERSONAL_ACCESS_TOKEN otherwise
-                 ** Set env variable GPR_USER & GPR_API_KEY**/
-
-                username = properties['gpr.usr'] ?: System.getenv("GPR_USER")
-                password = properties['gpr.key'] ?: System.getenv("GPR_API_KEY")
-            }
-        }
-    }
-}
-
-bintray {
-    user = properties['jcenter.usr'] ?: System.getenv('BINTRAY_USER')
-    key = properties['jcenter.key'] ?: System.getenv('BINTRAY_KEY')
-    configurations = ['archives']
-    pkg {
-        repo = 'nerdstone'
-        name = 'neat-android-stepper'
-        licenses = ['Apache-2.0']
-        desc = 'Library that allows using material stepper on an Android application.'
-        publish = true
-        vcsUrl = "https://github.com/ellykits/neat-stepper"
-        issueTrackerUrl = 'https://github.com/ellykits/neat-stepper/issues'
-        labels = ['stepper', 'kotlin-android', 'stepper-library']
-        publicDownloadNumbers = true
-        version {
-            name = this.version
-            desc = "Neat Stepper ${this.version}"
-            released = new Date()
-            vcsTag = this.version
-        }
-    }
-    publications = ['NeatStepper']
-}
+apply from: '../maven.gradle'
